<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:squeezer="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeActivity">

    <item
        android:icon="@drawable/ic_menu_search"
        android:id="@+id/menu_item_search"
        android:title="@string/menu_item_search_label"
        android:alphabeticShortcut="s"
        squeezer:showAsAction="ifRoom"
        android:orderInCategory="0"/>

    <item
        android:id="@+id/menu_item_playlist"
        android:title="@string/menu_item_playlist"
        android:alphabeticShortcut="p"
        android:icon="@drawable/ic_menu_playlist"
        squeezer:showAsAction="always|withText"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/menu_item_players"
        android:title="@string/menu_item_players"
        android:alphabeticShortcut="z"
        android:icon="@drawable/ic_menu_choose_player"
        squeezer:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_item_volume"
        android:title="@string/menu_item_volume"
        android:icon="@drawable/ic_volume"/>

    <item
        android:id="@+id/menu_item_poweron"
        android:title="@string/menu_item_poweron"
        android:icon="@android:drawable/ic_lock_power_off"/>

    <item
        android:id="@+id/menu_item_poweroff"
        android:title="@string/menu_item_poweroff"
        android:icon="@android:drawable/ic_lock_power_off"/>

    <item
        android:id="@+id/menu_item_connect"
        android:icon="@drawable/presence_online"
        android:title="@string/menu_item_connect"
        android:alphabeticShortcut="c"
        squeezer:showAsAction="never|withText"/>

    <item
        android:id="@+id/menu_item_disconnect"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/menu_item_disconnect"
        android:alphabeticShortcut="d"/>

    <!-- Force these to the bottom of the menu. -->

    <item
        android:icon="@android:drawable/ic_menu_preferences"
        android:id="@+id/menu_item_settings"
        android:title="@string/menu_item_settings_label"
        android:alphabeticShortcut="p"
        android:orderInCategory="99"/>

    <item
        android:icon="@android:drawable/ic_menu_info_details"
        android:id="@+id/menu_item_about"
        android:title="@string/menu_item_about_label"
        android:alphabeticShortcut="a"
        android:orderInCategory="100"/>
</menu>
